<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFC107"
    android:padding="30dp">

    <TextView
        style="@style/lamborghini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lamborghini"/>

    <TextView
        style="@style/lamborghini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fabricante_lamborghini"/>

    <TextView
        style="@style/lamborghini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lancamento_lamborghini"/>

</LinearLayout>